Revise README for clarity and consistency
Updated README to improve clarity and consistency in language, including feature descriptions and setup instructions.